Translate2 - Org/src/objects/Rank__c.object
<CustomObject>
    <description>Master Room Grade</description>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>増減金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>説明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <defaultValue>3000</defaultValue>
        <label>お布団代</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T8__c</fullName>
        <label>Tier8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier0__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tier0は料金レベルはありません</inlineHelpText>
        <label>Tier0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier1__c</fullName>
        <formula>Tier6__c   *0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier1c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier2__c</fullName>
        <formula>Tier7__c  *0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier2c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier3c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1H__c</fullName>
        <label>延長料[1H]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3H__c</fullName>
        <label>貸切料[3H]昼</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3Hyu__c</fullName>
        <label>貸切料[3H]夜</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>ランク</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>客室Rank±α名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckSelectTanitsu</fullName>
        <active>true</active>
        <description>Tier8から1のチェックボックスは単一のみ選択可能とする</description>
        <errorConditionFormula>IF ( (IF (Tier1c__c , 1,0) + IF (Tier2c__c , 1,0) + IF (Tier3c__c , 1,0) + IF (Tier4c__c , 1,0) + IF (Tier5c__c , 1,0) + IF (Tier6c__c , 1,0) + IF (Tier7c__c , 1,0) + IF (Tier8c__c , 1,0)+IF ( Tier0__c  , 1,0)) &gt; 1 || (IF (Tier1c__c , 1,0) + IF (Tier2c__c , 1,0) + IF (Tier3c__c , 1,0) + IF (Tier4c__c , 1,0) + IF (Tier5c__c , 1,0) + IF (Tier6c__c , 1,0) + IF (Tier7c__c , 1,0) + IF (Tier8c__c , 1,0)+IF ( Tier0__c  , 1,0)) = 0, TRUE,FALSE)</errorConditionFormula>
        <errorMessage>どれか一つしか選択できません、選択し直してください！</errorMessage>
    </validationRules>
</CustomObject>